--- a/style.css
+++ b/style.css
@@ -39,13 +39,23 @@ body {
 
 @keyframes rotate{
     0%{
-        background-position-x:0px;
+        background-position-x: 0px;
     }
-    100%{
-        background-position-x: -1000px;
-    }
-}
+    /* 100%{
+       transform: rotate(0deg);
+    }  */
 
+    100%{
+        background-position-x: 1000px;
+    }  
+         0% {
+             background-position-y: 0px;
+         }
+
+                  100% {
+                      background-position-y: 1000px;
+                  }
+}
 
 .main {
     position: fixed;
@@ -68,9 +78,10 @@ body {
 @keyframes zoom {
     0% {
         transform: scale(1);
-    }
+    } 
 
-    100% {
+     100% {
         transform: scale(1.5);
-    }
+    } 
+   
 }
